--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ NEXT_SECRET =123456789x@X
 GOOGLE_CLIENT_ID =1066772100270-1hkgjt0eodh4aqicmsh9o52ct7g37ecj.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET =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
 DATABASE_URL = mongodb+srv://testingservice332001:123456789x%40X@cluster0.qz1lu5a.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-# NEXTAUTH_URL = http://localhost:3000
-# NEXTAUTH_URL_INTERNAL =http://localhost:3000
+NEXTAUTH_URL = https://dear-darling-kt.vercel.app/
+NEXTAUTH_URL_INTERNAL =https://dear-darling-kt.vercel.app/
 NODE_ENV = 'development'
-UPLOADTHING_SECRET=s
+UPLOADTHING_SECRET=
 UPLOADTHING_APP_ID=
 
 
-NEXT_URL = http://localhost:3000
+NEXT_URL = https://dear-darling-kt.vercel.app/
